[metadata]
name = pytarlody
version = 0.0.1

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    playsound
     
    

[options.packages.find]
where = src

[flake8]
max-line-length = 100
